--- a/src/primeng-override.css
+++ b/src/primeng-override.css
@@ -86,6 +86,18 @@ p-columnfilterformelement .p-inputtext {
   min-width: var(--standard-field-width);
 }
 
+/* TODO Proper speed dial styling
+.p-speeddial-item { // For ALL dial items
+#pn_id_5_1 { // For a specific item, can change _1 to _2 and so on
+  border: 10px solid purple;
+  background-color: red;
+}
+#pn_id_5_2 .p-speeddial-action { // Circle itself
+  background-color: red;
+  opacity: 1;
+}
+*/
+
 /* Make the spinner thicker on large screens */
 @media (min-width: 500px) {
   .p-progress-spinner-circle {
