--- a/src/styles.css
+++ b/src/styles.css
@@ -2,17 +2,17 @@
   --fixed-toolbar-height: 60px;
   --progress-bar-height: 3px;
   --standard-field-width: 300px;
+  --dial-right-pos: 40px;
 }
 
 html, body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
 }
 
-body {
-  overflow-y: scroll;
+html {
+  height: 100%;
 }
 
 .center {
