--- a/src/app/manage-thing-dialog/manage-thing-dialog.component.css
+++ b/src/app/manage-thing-dialog/manage-thing-dialog.component.css
@@ -1,6 +1,6 @@
 .manage-thing-dialog input,
 .manage-thing-dialog textarea {
-  min-width: var(--standard-field-width);
+  width: var(--standard-field-width);
 }
 
 .content-form {
