--- a/src/app/toast-message/toast-message.component.html
+++ b/src/app/toast-message/toast-message.component.html
@@ -1,1 +1,29 @@
-<p-toast position="bottom-right" [preventOpenDuplicates]="true"/>
+<!-- Standard toast for normal notifications -->
+<p-toast key='basic' position="bottom-right" [preventOpenDuplicates]="true"/>
+
+<!-- Special custom toast for complete reminders -->
+<p-toast key="reminderComplete" position="bottom-left">
+  <ng-template let-message pTemplate="message">
+    <div class="flex flex-column" style="flex: 1">
+      <b>{{message.summary}}</b>
+      <p>{{message.detail}}</p>
+      <div>
+        <p-button (onClick)="confirmResponse(message)" icon="pi pi-check" severity="success" label="Mark Complete" />
+      </div>
+    </div>
+    <!--
+    <div class="flex flex-column" style="flex: 1">
+        <div class="text-center">
+            <i class="pi pi-exclamation-triangle" style="font-size: 3rem"></i>
+            <h4>{{message.summary}}</h4>
+            <p>{{message.detail}}</p>
+        </div>
+        <div class="grid p-fluid">
+            <div class="col-6">
+                <button type="button" pButton (click)="confirmResponse($event)" label="Yes" class="p-button-success"></button>
+            </div>
+        </div>
+    </div>
+    -->
+  </ng-template>
+</p-toast>
